--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,8 @@
     "ratio": "cpp",
     "sstream": "cpp",
     "vector": "cpp",
-    "fstream": "cpp"
+    "fstream": "cpp",
+    "filesystem": "cpp",
+    "algorithm": "cpp"
   }
 }
